k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thamires-api
  labels:
    app: thamires-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thamires-api
  template:
    metadata:
      labels:
        app: thamires-api
    spec:
      containers:
        - name: thamires-api
          image:  654654369899.dkr.ecr.us-east-1.amazonaws.com/thamires-api:latest
          ports:
            - containerPort: 3000
