k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thamires-api-service
spec:
  selector:
    app: thamires-api
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
