k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thamires-api-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: "thamires-group"
spec:
  ingressClassName: alb
  rules:
    - host: thamires-teste.exam.ezopscloud.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thamires-api-service
                port:
                  number: 80
